# dse-guides

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/handling-missing-data/: README.md  handling-missing-data.ipynb  handling-missing-data.md  pyproject.toml
docs/handling-missing-data/images/: 00_extrapolation.html  00_interpolation.html  00_seasonal_data_with_missing.html  01_filling_using_random_distribution.html  02_filling_using_feed_forward.html  03_filling_using_imputation.html  04_filling_using_interpolation.html  05_filling_using_arima_forecasting.html  06_filling_using_machine_learning_1.html  06_filling_using_machine_learning_2.html  07_filling_using_embedding.html  08_missing_data_handling_methods_comparison.html
docs/handling-missing-data/notebooks/: create-scales.ipynb  handling-missing-data-r.ipynb  handling-missing-data-r.md
docs/handling-missing-data/src/cli/: formatting.sh  scripts.py
docs/overrides/assets/css/: code_chunks.css  style.css
docs/querying-data/: README.md  index-pandas-r.ipynb  index-pandas-r.md  index-pandas.md  index-polars-r.ipynb  index-polars-r.md  index-polars.md  index-pyspark-r.ipynb  index-pyspark-r.md  index-pyspark.md  index-r.ipynb  index-r.md  index-sql-r.ipynb  index-sql-r.md  index-sql.md  index.md  pyproject.toml  querying-data.ipynb  querying-data.md
docs/querying-data/images/: pt2_total_sales_by_category_pd.html  pt2_total_sales_by_category_pl.html  pt2_total_sales_by_category_ps.html  pt2_total_sales_by_category_sql.html  pt4_daily_sales_with_7d_avg_pd.html  pt4_daily_sales_with_7d_avg_pl.html  pt4_daily_sales_with_7d_avg_ps.html  pt4_daily_sales_with_7d_avg_sql.html
docs/querying-data/notebooks/: querying-data-pandas-r.ipynb  querying-data-pandas.md  querying-data-polars-r.ipynb  querying-data-polars.md  querying-data-pyspark-r.ipynb  querying-data-pyspark.md  querying-data-r.ipynb  querying-data-sql-r.ipynb  querying-data-sql.md
docs/querying-data/src/cli/: formatting.sh
src/cli/: scripts.py
