[project]
name = "querying-data"
version = "0.1.0"
description = "tba..."
readme = "README.md"
license = "MIT"
authors = [
    { name="Chris Mahoney", email="dse@data-science-extensions.com" },
]
maintainers = [
    { name="Chris Mahoney", email="dse@data-science-extensions.com" },
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Unit",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]
requires-python = "==3.13.*"
dependencies = [
    "numpy==2.*",
    "pandas==2.*",
    "plotly==6.*",
    "pyspark==4.*",
    "polars==1.*",
    "pyarrow==22.*",  # <-- Used for converting from polars to pandas
]

[dependency-groups]
dev = [
    "black==25.*",
    "blacken-docs==1.*",
    "codespell==2.*",
    "ipykernel==7.*",
    "isort==7.*",
    "pre-commit==4.*",
    "pycln==2.*",
    "pylint==4.*",
    "pyupgrade==3.*",
]

[project.urls]
Homepage = "https://data-science-extensions.com"
Documentation = "https://data-science-extensions.com/latest/guides/querying-data/"
Repository = "https://github.com/data-science-extensions/dse-guides"

[project.scripts]
docs-serve-static = "cli.scripts:docs_serve_static"
lint = "cli.scripts:lint"
check = "cli.scripts:check"
lint-check = "cli.scripts:lint_check"
sync = "cli.scripts:uv_sync"
check-pytest = "cli.scripts:check_pytest"
reformat-file = "cli.scripts:reformat_file_cli"
convert-md-to-ipynb = "cli.scripts:convert_markdown_to_notebook_cli"
reformat-and-convert-md-to-ipynb = "cli.scripts:format_and_convert_cli"
extract-sections-from-markdown-file = "cli.scripts:extract_sections_from_markdown_file_cli"

[tool.black]
color = true
line-length = 120
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.codespell]
ignore-words-list = "demog,mape"

[tool.isort]
import_heading_future = "Future Library Imports"
import_heading_stdlib = "StdLib Imports"
import_heading_thirdparty = "Third Party Imports"
import_heading_firstparty = "Local First Party Imports"
import_heading_localfolder = "Local Module Imports"
profile = "black"
split_on_trailing_comma = true
combine_as_imports = true
lines_after_imports = 2

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
